--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@types/node": "^12.7.4",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "http-proxy-middleware": "^0.20.0",
     "node-sass": "^4.12.0",
+    "nprogress": "^0.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-loadable": "^5.5.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "0.9.5",
     "typescript": "^3.6.2"
