--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@types/react-dom": "^16.9.0",
     "dru": "^1.0.1",
     "http-proxy-middleware": "^0.20.0",
+    "mobx": "^5.13.0",
+    "mobx-react": "^6.1.3",
     "node-sass": "^4.12.0",
     "nprogress": "^0.2.0",
     "react": "^16.9.0",
